hphp/hack/test/typecheck/naming_fail_for_2.php
<?hh

function foo(): void {
  for (; true; $x = 1) {
    $y = $x;
  }
  echo $x;
}
